feat: add enhanced signal discovery workspace (#168)
Enhanced signal discovery workspace (Signals tab, PID profiles, TPMS discovery, live sampling) plus dashboard polish across all tabs, a per-session charge list, HV-pack stats, and a demo-scenario system. Adds supporting tests — a11y gate, demo↔native shape contract, tab×scenario visual matrix — and aligns CI to Java 21.